# llm-finetuning-aws

./: .gitignore  README.md  main.py  pyproject.toml
finetuning/: experiments.ipynb  requirements.txt
scripts/: train.py
