[project]
name = "llm-finetuning-aws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "boto3>=1.40.73",
    "cmake==3.27.0",
    "datasets>=4.0.0",
    "pandas>=2.3.3",
    "pyarrow==16.1.0",
    "sagemaker>=2.254.1",
    "transformers>=4.57.1",
]
